# music_recommender

./: .env.example  .gitignore  README.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
config/: artist_aliases.yml
docs/: api-usage-runbook.md  aws-deployment-architecture-runbook.md  base.md  data-extraction.md  local-demo-runbook.md  network-data.md  operational-aws-runbook.md  privacy-notice.md  product-api-backend-frontend.md  product-beta-acceptance.md  recommender-architecture.md  recommender-methodology-runbook.md  recommender-science-architecture.md  spotify-policy-assessment.md  vercel-deployment-runbook.md
infra/: README.md  deployment-role-template.yaml  template.yaml
plans/: 20260521-2257-data-extraction.md  20260521-2339-audio-lyrics-parquet-network.md  20260709-1204-spotify-profile-s3-deployment.md  beta-demo-agentic-recommender.md  explainable-spotify-discovery-beta.md  live-spotify-profile-strengthening.md  operational-aws-product.md  session-persistence-playlist-validation.md
scripts/: audit_beta_sources.py  bootstrap_s3_medallion.sh  demo_create_playlist.sh  demo_recommend.sh  demo_sync_profile.sh  deploy_api_sam.sh  prepare_lambda_build.sh  prune_lambda_artifacts.sh  smoke_test_deployed_api.sh  sync_runtime_secret.sh  upload_local_run_to_s3.sh  verify_vercel_deployment.sh
supabase/: config.toml
tests/: test_account_deletion.py  test_account_deletion_api.py  test_agent_cli.py  test_agent_guardrails.py  test_agent_intent.py  test_agent_orchestrator.py  test_agent_tools.py  test_api_cli.py  (+63 more)
(+160 files in other folders)
