[project]
name = "music-recommender"
version = "0.1.0"
description = "Local data extraction pipeline for a music recommender education project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.115",
    "httpx>=0.27",
    "mangum>=0.19",
    "openai-agents>=0.17.7",
    "pyarrow>=16.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
    "zstandard>=0.22",
]

[project.scripts]
music-recommender-extract = "music_recommender.cli:main"
music-recommender-network = "music_recommender.network_cli:main"
music-recommender-demo-readiness = "music_recommender.demo_readiness_cli:main"
music-recommender-agent = "music_recommender.agent_cli:main"
music-recommender-api = "music_recommender.api_cli:main"

[project.optional-dependencies]
nlp = [
    "fasttext-wheel>=0.9.2",
    "torch>=2.3",
    "transformers>=4.41",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_recommender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unreachable = true
show_error_codes = true
